Package_Tools/include-C/ssh/libssh_xxxx/libssh.h

  typedef unsigned int uint32_t;
  typedef unsigned long long uint64_t;
typedef struct ssh_counter_struct *ssh_counter;
typedef struct ssh_channel_struct* ssh_channel;
typedef struct ssh_key_struct* ssh_key;
typedef struct ssh_scp_struct* ssh_scp;
typedef struct ssh_session_struct* ssh_session;
typedef struct ssh_connector_struct * ssh_connector;
typedef SOCKET socket_t;
typedef int socket_t;
enum ssh_connector_flags_e {
    /** Only the standard stream of the channel */
    SSH_CONNECTOR_STDOUT = 1,
    SSH_CONNECTOR_STDINOUT = 1,
    /** Only the exception stream of the channel */
    SSH_CONNECTOR_STDERR = 2,
    /** Merge both standard and exception streams */
    SSH_CONNECTOR_BOTH = 3
};
extern int ssh_blocking_flush(ssh_session session, int timeout);
extern ssh_channel ssh_channel_accept_x11(ssh_channel channel, int timeout_ms);
extern int ssh_channel_change_pty_size(ssh_channel channel,int cols,int rows);
extern int ssh_channel_close(ssh_channel channel);
extern void ssh_channel_free(ssh_channel channel);
extern int ssh_channel_get_exit_status(ssh_channel channel);
extern ssh_session ssh_channel_get_session(ssh_channel channel);
extern int ssh_channel_is_closed(ssh_channel channel);
extern int ssh_channel_is_eof(ssh_channel channel);
extern int ssh_channel_is_open(ssh_channel channel);
extern ssh_channel ssh_channel_new(ssh_session session);
extern int ssh_channel_open_auth_agent(ssh_channel channel);
extern int ssh_channel_open_forward(ssh_channel channel, const char *remotehost,
    int remoteport, const char *sourcehost, int localport);
extern int ssh_channel_open_forward_unix(ssh_channel channel, const char *remotepath,
    const char *sourcehost, int localport);
extern int ssh_channel_open_session(ssh_channel channel);
extern int ssh_channel_open_x11(ssh_channel channel, const char *orig_addr, int orig_port);
extern int ssh_channel_poll(ssh_channel channel, int is_stderr);
extern int ssh_channel_poll_timeout(ssh_channel channel, int timeout, int is_stderr);
extern int ssh_channel_read(ssh_channel channel, void *dest, uint32_t count, int is_stderr);
extern int ssh_channel_read_timeout(ssh_channel channel, void *dest, uint32_t count, int is_stderr, int timeout_ms);
extern int ssh_channel_read_nonblocking(ssh_channel channel, void *dest, uint32_t count,
    int is_stderr);
extern int ssh_channel_request_env(ssh_channel channel, const char *name, const char *value);
extern int ssh_channel_request_exec(ssh_channel channel, const char *cmd);
extern int ssh_channel_request_pty(ssh_channel channel);
extern int ssh_channel_request_pty_size(ssh_channel channel, const char *term,
    int cols, int rows);
extern int ssh_channel_request_shell(ssh_channel channel);
extern int ssh_channel_request_send_signal(ssh_channel channel, const char *signum);
extern int ssh_channel_request_send_break(ssh_channel channel, uint32_t length);
extern int ssh_channel_request_sftp(ssh_channel channel);
extern int ssh_channel_request_subsystem(ssh_channel channel, const char *subsystem);
extern int ssh_channel_request_x11(ssh_channel channel, int single_connection, const char *protocol,
    const char *cookie, int screen_number);
extern int ssh_channel_request_auth_agent(ssh_channel channel);
extern int ssh_channel_send_eof(ssh_channel channel);
extern void ssh_channel_set_blocking(ssh_channel channel, int blocking);
extern void ssh_channel_set_counter(ssh_channel channel,
                                        ssh_counter counter);
extern int ssh_channel_write(ssh_channel channel, const void *data, uint32_t len);
extern int ssh_channel_write_stderr(ssh_channel channel,
                                        const void *data,
                                        uint32_t len);
extern uint32_t ssh_channel_window_size(ssh_channel channel);
extern char *ssh_basename (const char *path);
extern void ssh_clean_pubkey_hash(unsigned char **hash);
extern int ssh_connect(ssh_session session);
extern ssh_connector ssh_connector_new(ssh_session session);
extern void ssh_connector_free(ssh_connector connector);
extern int ssh_connector_set_in_channel(ssh_connector connector,
                                            ssh_channel channel,
                                            enum ssh_connector_flags_e flags);
extern int ssh_connector_set_out_channel(ssh_connector connector,
                                             ssh_channel channel,
                                             enum ssh_connector_flags_e flags);
extern void ssh_connector_set_in_fd(ssh_connector connector, socket_t fd);
extern void ssh_connector_set_out_fd(ssh_connector connector, socket_t fd);
extern const char *ssh_copyright(void);
extern void ssh_disconnect(ssh_session session);
extern char *ssh_dirname (const char *path);
extern int ssh_finalize(void);
/* REVERSE PORT FORWARDING */
extern ssh_channel ssh_channel_open_forward_port(ssh_session session,
                                                   int timeout_ms,
                                                   int *destination_port,
                                                   char **originator,
                                                   int *originator_port);
/*SSH_DEPRECATED*/ extern ssh_channel ssh_channel_accept_forward(ssh_session session,
                                                  int timeout_ms,
                                                  int *destination_port);
extern int ssh_channel_cancel_forward(ssh_session session,
                                          const char *address,
                                          int port);
extern int ssh_channel_listen_forward(ssh_session session,
                                          const char *address,
                                          int port,
                                          int *bound_port);
extern void ssh_free(ssh_session session);
extern const char *ssh_get_disconnect_message(ssh_session session);
extern const char *ssh_get_error(void *error);
extern int ssh_get_error_code(void *error);
extern socket_t ssh_get_fd(ssh_session session);
extern char *ssh_get_hexa(const unsigned char *what, size_t len);
extern char *ssh_get_issue_banner(ssh_session session);
extern int ssh_get_openssh_version(ssh_session session);
extern int ssh_get_server_publickey(ssh_session session, ssh_key *key);
enum ssh_publickey_hash_type {
    SSH_PUBLICKEY_HASH_SHA1,
    SSH_PUBLICKEY_HASH_MD5,
    SSH_PUBLICKEY_HASH_SHA256
};
extern int ssh_get_publickey_hash(const ssh_key key,
                                      enum ssh_publickey_hash_type type,
                                      unsigned char **hash,
                                      size_t *hlen);
/* DEPRECATED FUNCTIONS */
/*SSH_DEPRECATED*/ extern int ssh_get_pubkey_hash(ssh_session session, unsigned char **hash);
/*SSH_DEPRECATED*/ extern ssh_channel ssh_forward_accept(ssh_session session, int timeout_ms);
/*SSH_DEPRECATED*/ extern int ssh_forward_cancel(ssh_session session, const char *address, int port);
/*SSH_DEPRECATED*/ extern int ssh_forward_listen(ssh_session session, const char *address, int port, int *bound_port);
/*SSH_DEPRECATED*/ extern int ssh_get_publickey(ssh_session session, ssh_key *key);
/*SSH_DEPRECATED*/ extern int ssh_write_knownhost(ssh_session session);
/*SSH_DEPRECATED*/ extern char *ssh_dump_knownhost(ssh_session session);
/*SSH_DEPRECATED*/ extern void ssh_print_hexa(const char *descr, const unsigned char *what, size_t len);
/*SSH_DEPRECATED*/ extern int ssh_channel_select(ssh_channel *readchans, ssh_channel *writechans, ssh_channel *exceptchans, struct
        timeval * timeout);
/*SSH_DEPRECATED*/ extern int ssh_scp_accept_request(ssh_scp scp);
/*SSH_DEPRECATED*/ extern int ssh_scp_deny_request(ssh_scp scp, const char *reason);
/*SSH_DEPRECATED*/ extern void ssh_scp_free(ssh_scp scp);
/*SSH_DEPRECATED*/ extern int ssh_scp_init(ssh_scp scp);
/*SSH_DEPRECATED*/ extern int ssh_scp_leave_directory(ssh_scp scp);
/*SSH_DEPRECATED*/ extern ssh_scp ssh_scp_new(ssh_session session, int mode, const char *location);
/*SSH_DEPRECATED*/ extern int ssh_scp_pull_request(ssh_scp scp);
/*SSH_DEPRECATED*/ extern int ssh_scp_push_directory(ssh_scp scp, const char *dirname, int mode);
/*SSH_DEPRECATED*/ extern int ssh_scp_push_file(ssh_scp scp, const char *filename, size_t size, int perms);
/*SSH_DEPRECATED*/ extern int ssh_scp_push_file64(ssh_scp scp, const char *filename, uint64_t size, int perms);
/*SSH_DEPRECATED*/ extern int ssh_scp_read(ssh_scp scp, void *buffer, size_t size);
/*SSH_DEPRECATED*/ extern const char *ssh_scp_request_get_filename(ssh_scp scp);
/*SSH_DEPRECATED*/ extern int ssh_scp_request_get_permissions(ssh_scp scp);
/*SSH_DEPRECATED*/ extern size_t ssh_scp_request_get_size(ssh_scp scp);
/*SSH_DEPRECATED*/ extern uint64_t ssh_scp_request_get_size64(ssh_scp scp);
/*SSH_DEPRECATED*/ extern const char *ssh_scp_request_get_warning(ssh_scp scp);
/*SSH_DEPRECATED*/ extern int ssh_scp_write(ssh_scp scp, const void *buffer, size_t len);