Packages_2024/libssh_0.10.6/libssh/libssh_.inc


function ssh_blocking_flush(session: Tssh_session; timeout: longint): longint; cdecl; external libssh;
function ssh_channel_accept_x11(channel: Tssh_channel; timeout_ms: longint): Tssh_channel; cdecl; external libssh;
function ssh_channel_change_pty_size(channel: Tssh_channel; cols: longint; rows: longint): longint; cdecl; external libssh;
function ssh_channel_close(channel: Tssh_channel): longint; cdecl; external libssh;
procedure ssh_channel_free(channel: Tssh_channel); cdecl; external libssh;
function ssh_channel_get_exit_status(channel: Tssh_channel): longint; cdecl; external libssh;
function ssh_channel_get_session(channel: Tssh_channel): Tssh_session; cdecl; external libssh;
function ssh_channel_is_closed(channel: Tssh_channel): longint; cdecl; external libssh;
function ssh_channel_is_eof(channel: Tssh_channel): longint; cdecl; external libssh;
function ssh_channel_is_open(channel: Tssh_channel): longint; cdecl; external libssh;
function ssh_channel_new(session: Tssh_session): Tssh_channel; cdecl; external libssh;
function ssh_channel_open_auth_agent(channel: Tssh_channel): longint; cdecl; external libssh;
function ssh_channel_open_forward(channel: Tssh_channel; remotehost: pchar; remoteport: longint; sourcehost: pchar; localport: longint): longint; cdecl; external libssh;
function ssh_channel_open_forward_unix(channel: Tssh_channel; remotepath: pchar; sourcehost: pchar; localport: longint): longint; cdecl; external libssh;
function ssh_channel_open_session(channel: Tssh_channel): longint; cdecl; external libssh;
function ssh_channel_open_x11(channel: Tssh_channel; orig_addr: pchar; orig_port: longint): longint; cdecl; external libssh;
function ssh_channel_poll(channel: Tssh_channel; is_stderr: longint): longint; cdecl; external libssh;
function ssh_channel_poll_timeout(channel: Tssh_channel; timeout: longint; is_stderr: longint): longint; cdecl; external libssh;
function ssh_channel_read(channel: Tssh_channel; dest: pointer; count: Tuint32_t; is_stderr: longint): longint; cdecl; external libssh;
function ssh_channel_read_timeout(channel: Tssh_channel; dest: pointer; count: Tuint32_t; is_stderr: longint; timeout_ms: longint): longint; cdecl; external libssh;
function ssh_channel_read_nonblocking(channel: Tssh_channel; dest: pointer; count: Tuint32_t; is_stderr: longint): longint; cdecl; external libssh;
function ssh_channel_request_env(channel: Tssh_channel; name: pchar; value: pchar): longint; cdecl; external libssh;
function ssh_channel_request_exec(channel: Tssh_channel; cmd: pchar): longint; cdecl; external libssh;
function ssh_channel_request_pty(channel: Tssh_channel): longint; cdecl; external libssh;
function ssh_channel_request_pty_size(channel: Tssh_channel; term: pchar; cols: longint; rows: longint): longint; cdecl; external libssh;
function ssh_channel_request_shell(channel: Tssh_channel): longint; cdecl; external libssh;
function ssh_channel_request_send_signal(channel: Tssh_channel; signum: pchar): longint; cdecl; external libssh;
function ssh_channel_request_send_break(channel: Tssh_channel; length: Tuint32_t): longint; cdecl; external libssh;
function ssh_channel_request_sftp(channel: Tssh_channel): longint; cdecl; external libssh;
function ssh_channel_request_subsystem(channel: Tssh_channel; subsystem: pchar): longint; cdecl; external libssh;
function ssh_channel_request_x11(channel: Tssh_channel; single_connection: longint; protocol: pchar; cookie: pchar; screen_number: longint): longint; cdecl; external libssh;
function ssh_channel_request_auth_agent(channel: Tssh_channel): longint; cdecl; external libssh;
function ssh_channel_send_eof(channel: Tssh_channel): longint; cdecl; external libssh;
procedure ssh_channel_set_blocking(channel: Tssh_channel; blocking: longint); cdecl; external libssh;
procedure ssh_channel_set_counter(channel: Tssh_channel; counter: Pssh_counter); cdecl; external libssh;
function ssh_channel_write(channel: Tssh_channel; data: pointer; len: Tuint32_t): longint; cdecl; external libssh;
function ssh_channel_write_stderr(channel: Tssh_channel; data: pointer; len: Tuint32_t): longint; cdecl; external libssh;
function ssh_channel_window_size(channel: Tssh_channel): Tuint32_t; cdecl; external libssh;
function ssh_basename(path: pchar): pchar; cdecl; external libssh;
procedure ssh_clean_pubkey_hash(hash: PPbyte); cdecl; external libssh;
function ssh_connect(session: Tssh_session): longint; cdecl; external libssh;
function ssh_connector_new(session: Tssh_session): Tssh_connector; cdecl; external libssh;
procedure ssh_connector_free(connector: Tssh_connector); cdecl; external libssh;
function ssh_connector_set_in_channel(connector: Tssh_connector; channel: Tssh_channel; flags: Tssh_connector_flags_e): longint; cdecl; external libssh;
function ssh_connector_set_out_channel(connector: Tssh_connector; channel: Tssh_channel; flags: Tssh_connector_flags_e): longint; cdecl; external libssh;
procedure ssh_connector_set_in_fd(connector: Tssh_connector; fd: Tsocket_t); cdecl; external libssh;
procedure ssh_connector_set_out_fd(connector: Tssh_connector; fd: Tsocket_t); cdecl; external libssh;
function ssh_copyright: pchar; cdecl; external libssh;
procedure ssh_disconnect(session: Tssh_session); cdecl; external libssh;
function ssh_dirname(path: pchar): pchar; cdecl; external libssh;
function ssh_finalize: longint; cdecl; external libssh;
function ssh_channel_open_forward_port(session: Tssh_session; timeout_ms: longint; destination_port: Plongint; originator: PPchar; originator_port: Plongint): Tssh_channel; cdecl; external libssh;
function ssh_channel_accept_forward(session: Tssh_session; timeout_ms: longint; destination_port: Plongint): Tssh_channel; cdecl; external libssh; deprecated;
function ssh_channel_cancel_forward(session: Tssh_session; address: pchar; port: longint): longint; cdecl; external libssh;
function ssh_channel_listen_forward(session: Tssh_session; address: pchar; port: longint; bound_port: Plongint): longint; cdecl; external libssh;
procedure ssh_free(session: Tssh_session); cdecl; external libssh;
function ssh_get_disconnect_message(session: Tssh_session): pchar; cdecl; external libssh;
function ssh_get_error(error: pointer): pchar; cdecl; external libssh;
function ssh_get_error_code(error: pointer): longint; cdecl; external libssh;
function ssh_get_fd(session: Tssh_session): Tsocket_t; cdecl; external libssh;
function ssh_get_hexa(what: pbyte; len: Tsize_t): pchar; cdecl; external libssh;
function ssh_get_issue_banner(session: Tssh_session): pchar; cdecl; external libssh;
function ssh_get_openssh_version(session: Tssh_session): longint; cdecl; external libssh;
function ssh_get_server_publickey(session: Tssh_session; key: Pssh_key): longint; cdecl; external libssh;

type
  Tssh_publickey_hash_type = longint;

const
  SSH_PUBLICKEY_HASH_SHA1 = 0;
  SSH_PUBLICKEY_HASH_MD5 = 1;
  SSH_PUBLICKEY_HASH_SHA256 = 2;

function ssh_get_publickey_hash(key: Tssh_key; _type: Tssh_publickey_hash_type; hash: PPbyte; hlen: Psize_t): longint; cdecl; external libssh;

{ DEPRECATED FUNCTIONS  }
function ssh_get_pubkey_hash(session: Tssh_session; hash: PPbyte): longint; cdecl; external libssh; deprecated;
function ssh_forward_accept(session: Tssh_session; timeout_ms: longint): Tssh_channel; cdecl; external libssh; deprecated;
function ssh_forward_cancel(session: Tssh_session; address: pchar; port: longint): longint; cdecl; external libssh; deprecated;
function ssh_forward_listen(session: Tssh_session; address: pchar; port: longint; bound_port: Plongint): longint; cdecl; external libssh; deprecated;
function ssh_get_publickey(session: Tssh_session; key: Pssh_key): longint; cdecl; external libssh; deprecated;
function ssh_write_knownhost(session: Tssh_session): longint; cdecl; external libssh; deprecated;
function ssh_dump_knownhost(session: Tssh_session): pchar; cdecl; external libssh; deprecated;
procedure ssh_print_hexa(descr: pchar; what: pbyte; len: Tsize_t); cdecl; external libssh; deprecated;
function ssh_channel_select(readchans: Pssh_channel; writechans: Pssh_channel; exceptchans: Pssh_channel; timeout: Ptimeval): longint; cdecl; external libssh; deprecated;
function ssh_scp_accept_request(scp: Tssh_scp): longint; cdecl; external libssh; deprecated;
function ssh_scp_deny_request(scp: Tssh_scp; reason: pchar): longint; cdecl; external libssh; deprecated;
procedure ssh_scp_free(scp: Tssh_scp); cdecl; external libssh; deprecated;
function ssh_scp_init(scp: Tssh_scp): longint; cdecl; external libssh; deprecated;
function ssh_scp_leave_directory(scp: Tssh_scp): longint; cdecl; external libssh; deprecated;
function ssh_scp_new(session: Tssh_session; mode: longint; location: pchar): Tssh_scp; cdecl; external libssh; deprecated;
function ssh_scp_pull_request(scp: Tssh_scp): longint; cdecl; external libssh; deprecated;
function ssh_scp_push_directory(scp: Tssh_scp; dirname: pchar; mode: longint): longint; cdecl; external libssh; deprecated;
function ssh_scp_push_file(scp: Tssh_scp; filename: pchar; size: Tsize_t; perms: longint): longint; cdecl; external libssh; deprecated;
function ssh_scp_push_file64(scp: Tssh_scp; filename: pchar; size: Tuint64_t; perms: longint): longint; cdecl; external libssh; deprecated;
function ssh_scp_read(scp: Tssh_scp; buffer: pointer; size: Tsize_t): longint; cdecl; external libssh; deprecated;
function ssh_scp_request_get_filename(scp: Tssh_scp): pchar; cdecl; external libssh; deprecated;
function ssh_scp_request_get_permissions(scp: Tssh_scp): longint; cdecl; external libssh; deprecated;
function ssh_scp_request_get_size(scp: Tssh_scp): Tsize_t; cdecl; external libssh; deprecated;
function ssh_scp_request_get_size64(scp: Tssh_scp): Tuint64_t; cdecl; external libssh; deprecated;
function ssh_scp_request_get_warning(scp: Tssh_scp): pchar; cdecl; external libssh; deprecated;
function ssh_scp_write(scp: Tssh_scp; buffer: pointer; len: Tsize_t): longint; cdecl; external libssh; deprecated;
